@@ -29,7 +29,7 @@
 #define defgKeySysMenu                  XK_Escape, kfCtrl, "Ctrl+Esc"
 #define defgKeySysWindowList            XK_Escape, kfCtrl+kfAlt, "Alt+Ctrl+Esc"
 #define defgKeySysWinListMenu           0, 0, ""
-#define defgKeySysRun                   'r', kfAlt+kfCtrl, "Alt+Ctrl+r"
+///#define defgKeySysRun                   'r', kfAlt+kfCtrl, "Alt+Ctrl+r"
 #define defgKeySysAddressBar            ' ', kfAlt+kfCtrl, "Alt+Ctrl+Space"
 #define defgKeyWinMenu                  ' ', kfAlt, "Alt+Space"
 #define defgKeySysWorkspacePrev         XK_Left, kfAlt+kfCtrl, "Alt+Ctrl+Left"
@@ -132,7 +132,7 @@ DEF_WMKEY(gKeySysDialog);
 DEF_WMKEY(gKeySysMenu);
 DEF_WMKEY(gKeySysWindowList);
 DEF_WMKEY(gKeySysWinListMenu);
-DEF_WMKEY(gKeySysRun);
+///DEF_WMKEY(gKeySysRun);
 DEF_WMKEY(gKeySysAddressBar);
 DEF_WMKEY(gKeySysWorkspacePrev);
 DEF_WMKEY(gKeySysWorkspaceNext);
